--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -2,4 +2,4 @@
   .container
     = link_to "Tales", root_url, class: "navbar-brand"
     %button{ type: "button", class: "btn btn-default navbar-btn" }
-      = link_to "Zarejestruj / tłumacz", new_user_registration_path
+      = link_to t(".sign_in"), new_user_session_path
