--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,10 +1,12 @@
 %h2= title t(".heading")
 = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = f.error_notification
-  .form-inputs
-    = f.input :email, :required => true, :autofocus => true
-    = f.input :password, :required => true
-    = f.input :password_confirmation, :required => true
+  = f.input :email, :required => true, :autofocus => true,
+    label_html: { class: "sr-only" }
+  = f.input :password, :required => true,
+    label_html: { class: "sr-only" }
+  = f.input :password_confirmation, :required => true,
+    label_html: { class: "sr-only" }
   .form-actions
-    = f.button :submit, "Sign up"
+    = f.button :button, t(".create_account")
 = render "devise/shared/links"
