--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,6 @@
 %h2= title t(".heading")
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+= simple_form_for(resource, :as => resource_name,
+  :url => registration_path(resource_name)) do |f|
   = f.error_notification
   = f.input :email, :required => true, :autofocus => true,
     label_html: { class: "sr-only" }
