--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,9 +1,6 @@
-%h2 Resend confirmation instructions
+%h2= t(".heading")
 = simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f|
-  = f.error_notification
   = f.full_error :confirmation_token
-  .form-inputs
-    = f.input :email, :required => true, :autofocus => true
-  .form-actions
-    = f.button :submit, "Resend confirmation instructions"
+  = f.input :email, :required => true, :autofocus => true
+  = f.button :submit, t(".resend")
 = render "devise/shared/links"
