--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,18 +1,14 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, :required => true, :autofocus => true
-    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-      %p
-        Currently waiting confirmation for: #{resource.unconfirmed_email}
-    = f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false
-    = f.input :password_confirmation, :required => false
-    = f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true
+%h2= title t(".heading")
+= simple_form_for(resource, :as => resource_name,
+  :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+  = f.input :email, :required => true, :autofocus => true
+  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+    %p
+      Currently waiting confirmation for: #{resource.unconfirmed_email}
+  = f.input :password, :autocomplete => "off", :hint => t(".leave_blank_or_change"), :required => false
+  = f.input :password_confirmation, :required => false
+  = f.input :current_password, :hint => t(".current_password_required"), :required => true
   .form-actions
-    = f.button :submit, "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}
-= link_to "Back", :back
+    = f.button :submit
+
+= link_to t(".remove_account"), registration_path(resource_name), :data => { :confirm => t("questions.confirm") }, :method => :delete
