--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,14 +1,16 @@
 %h2= title t(".heading")
-= simple_form_for(resource, :as => resource_name,
-  :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = f.input :email, :required => true, :autofocus => true
+= simple_form_for resource, as: resource_name,
+  url: registration_path(resource_name), method: :put do |f|
+  = f.input :email, required: true, autofocus: true
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %p
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  = f.input :password, :autocomplete => "off", :hint => t(".leave_blank_or_change"), :required => false
-  = f.input :password_confirmation, :required => false
-  = f.input :current_password, :hint => t(".current_password_required"), :required => true
+    .alert.alert-warning= t(".waiting_for_confirmation", email: resource.unconfirmed_email)
+  = f.input :password, autocomplete: "off", hint: t(".leave_blank_or_change"),
+    required: false
+  = f.input :password_confirmation, required: false
+  = f.input :current_password, hint: t(".current_password_required"),
+    required: true
   .form-actions
     = f.button :submit
 
-= link_to t(".remove_account"), registration_path(resource_name), :data => { :confirm => t("questions.confirm") }, :method => :delete
+= link_to t(".remove_account"), registration_path(resource_name),
+  data: { confirm: t("questions.confirm") }, method: :delete
