--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,2 +1,3 @@
-- if can? :edit, @user
-  = link_to t(".edit"), edit_user_registration_path
+= action_link_to :new, Game, new_game_path, name: t(".new_game")
+= action_link_to :edit, @user, edit_user_registration_path
+
