--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -2,7 +2,7 @@
   .container
     = link_to "Tales", root_url, class: "navbar-brand"
     - if current_user
-      = link_to current_user.email, current_user
+      = link_to current_user.email, current_user, class: "navbar-text navbar-right"
       %button{ type: "button", class: "btn btn-default navbar-btn" }
         = link_to t(".sign_out"), destroy_user_session_path, method: :delete
     - else
