--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,11 +1,11 @@
 .page-header
   %h1= title t(".heading")
 
-= action_link_to :edit, @user, url: edit_user_registration_path
-= action_link_to :new, Game, name: t(".new_game")
+= action_link_to :edit, edit_user_registration_path, if: can?(:edit, @user)
+= action_link_to t(".new_game"), new_game_path, if: can?(:manage, @user)
 - @user.games.each do |game|
   .col-sm-6
     .thumbnail
       %h3= game.name
       %p= game.description
-      = action_link_to :new, Game, name: t(".new_game")
+      = action_link_to :show, game, if: can?(:show, game)
