--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,5 +1,6 @@
 .page-header
   %h1= title @game.name
+  = action_link_to :edit, [:edit, @game], if: can?(:edit, @game)
   = action_link_to :destroy, @game, method: :delete,
     data: { confirm: t("questions.confirm") }, if: can?(:destroy, @game)
 %p= @game.description
