Can add head node to edge, but edge can be from other game. #needbugfix.

--- a/app/views/nodes/show.html.haml
+++ b/app/views/nodes/show.html.haml
@@ -8,3 +8,11 @@
   
 = action_link_to t(".new_edge"), [:new, @game, @node, :edge], if: can?(:edit, @game)
 
+.list-group
+  - @node.children_edges.each do |edge|
+    .list-group-item
+      = link_to_unless edge.head.nil?, edge.content, [@game, edge.head]
+      = action_link_to :edit, [:edit, @game, @node, edge], if: can?(:edit, edge)
+      = action_link_to :destroy, [@game, @node, edge], method: :delete,
+        data: { confirm: t("questions.confirm") }, if: can?(:destroy, edge)
+  
