--- a/app/views/nodes/_form.html.haml
+++ b/app/views/nodes/_form.html.haml
@@ -1,3 +1,5 @@
 = simple_form_for [@game, @node] do |f|
+  - if @edge.present?
+    = hidden_field "", :edge_id, value: @edge.id
   = f.input :content
   = f.button :submit
