--- a/app/views/devise/shared/_links.haml
+++ b/app/views/devise/shared/_links.haml
@@ -17,3 +17,7 @@
   - resource_class.omniauth_providers.each do |provider|
     = link_to t(".sign_in_with", provider: provider.to_s.titleize), omniauth_authorize_path(resource_name, provider)
     %br/
+    
+    
+    
+= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
