--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -1,10 +1,19 @@
-%nav.navbar.navbar-default.navbar-static-top
+%nav.navbar.navbar-default.navbar-static-top{ role: "navigation" }
   .container
-    = link_to "Tales", root_url, class: "navbar-brand"
-    - if current_user
-      = link_to current_user.email, current_user, class: "navbar-text navbar-right"
-      %button{ type: "button", class: "btn btn-default navbar-btn" }
-        = link_to t(".sign_out"), destroy_user_session_path, method: :delete
-    - else
-      %button{ type: "button", class: "btn btn-default navbar-btn" }
-        = link_to t(".sign_in"), new_user_session_path
+    .navbar-header
+      %button.navbar-toggle{ type: "button", data: { toggle: "collapse",
+                             target: "#main-nav" } }
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      = link_to "Tales", root_url, class: "navbar-brand"
+    
+    #main-nav.collapse.navbar-collapse
+      %ul.nav.navbar-nav.navbar-right
+        - if current_user
+          %li= link_to current_user.email, current_user
+          %li= link_to t(".sign_out"), destroy_user_session_path, method: :delete
+        - else
+          %li= link_to t(".sign_in"), new_user_session_path
+
