Custom layout for authorization process. Log in after email confirmation is done automatically.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,9 @@
   %body
     = render "header"
     = render "alerts"
-    .container
-      = yield
+    - if content_for? :main_container
+      = yield(:main_container)
+    - else
+      .container
+        = yield
     
