Set container width for authorization process.

--- a/app/views/layouts/authorization.html.haml
+++ b/app/views/layouts/authorization.html.haml
@@ -1,5 +1,5 @@
 - content_for :main_container do
-  .container
+  .container.col-lg-3.col-lg-offset-5.col-sm-4.col-sm-offset-4
     = yield
 
 = render template: "layouts/application"
