--- a/app/views/layouts/authorization.html.haml
+++ b/app/views/layouts/authorization.html.haml
@@ -1,5 +1,5 @@
 - content_for :main_container do
-  .container.col-lg-3.col-lg-offset-5.col-sm-4.col-sm-offset-4
+  .container.col-lg-4.col-lg-offset-4.col-sm-6.col-sm-offset-3.col-xs-10.col-xs-offset-1
     = yield
 
 = render template: "layouts/application"
