--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -15,5 +15,6 @@
           %li= link_to current_user.email, current_user
           %li= link_to t(".sign_out"), destroy_user_session_path, method: :delete
         - else
+          %li= link_to t(".sign_up"), new_user_registration_path
           %li= link_to t(".sign_in"), new_user_session_path
 
