--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -2,14 +2,16 @@
 = simple_form_for resource, as: resource_name,
   url: registration_path(resource_name), method: :put do |f|
   = f.input :username, required: true, autofocus: true
-  = f.input :email, required: true
+  = f.input :email, required: true,
+    input_html: { disabled: resource.provider_type.present? }
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     .alert.alert-warning= t(".waiting_for_confirmation", email: resource.unconfirmed_email)
-  = f.input :password, autocomplete: "off", hint: t(".leave_blank_or_change"),
-    required: false
-  = f.input :password_confirmation, required: false
-  = f.input :current_password, hint: t(".current_password_required"),
-    required: true
+  - if f.object.needs_password?
+    = f.input :password, autocomplete: "off", hint: t(".leave_blank_or_change"),
+      required: false
+    = f.input :password_confirmation, required: false
+    = f.input :current_password, hint: t(".current_password_required"),
+      required: true
   .form-actions
     = f.button :submit
 
