--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -17,4 +17,5 @@
         - else
           %li= link_to t(".sign_up"), new_user_registration_path
           %li= link_to t(".sign_in"), new_user_session_path
+          %li= link_to t(".sign_up_with_facebook"), user_omniauth_authorize_path(:facebook)
 
