--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,6 +1,10 @@
 %h1= title t(".heading")
 = simple_form_for resource, as: resource_name,
   url: registration_path(resource_name), method: :put do |f|
+  = f.input :avatar
+  = f.input :avatar_cache, as: :hidden
+  - if resource.avatar.present?
+    = image_tag resource.avatar.thumb.url, alt: "Avatar"
   = f.input :username, required: true, autofocus: true
   = f.input :email, required: true,
     input_html: { disabled: resource.provider_type.present? }
