--- a/app/views/paragraphs/show.html.haml
+++ b/app/views/paragraphs/show.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  %h1= title @game.name
+  %h1= link_to title(@game.name), @game
 %p= @paragraph.content
 
 = action_link_to :edit, [:edit, @game, @paragraph], if: can?(:edit, @paragraph)
@@ -13,7 +13,8 @@
   - @paragraph.children_choices.each do |choice|
     .list-group-item
       = link_to_unless choice.head.nil?, choice.content, [@game, choice.head]
-      = action_link_to t(".new_head"), new_game_paragraph_path(params: { choice_id: choice.id }),
+      = action_link_to t(".new_head"),
+        new_game_paragraph_path(params: { choice_id: choice.id }),
         if: can?(:new, choice.build_head)
       = action_link_to :edit, [:edit, @game, @paragraph, choice], if: can?(:edit, choice)
       = action_link_to :destroy, [@game, @paragraph, choice], method: :delete,
