--- a/app/views/paragraphs/show.html.haml
+++ b/app/views/paragraphs/show.html.haml
@@ -1,5 +1,11 @@
 .page-header
   %h1= link_to title(@game.name), @game
+
+%h2= t(".parent_paragraphs")
+%ul
+  - @paragraph.parent_paragraphs.each do |parent_paragraph|
+    %li= link_to parent_paragraph.content, [@game, parent_paragraph]
+
 %p= @paragraph.content
 
 = action_link_to :edit, [:edit, @game, @paragraph], if: can?(:edit, @paragraph)
@@ -7,15 +13,16 @@
   data: { confirm: t("questions.confirm") }, if: can?(:destroy, @paragraph)
   
 = action_link_to t(".new_choice"), [:new, @game, @paragraph, :choice],
-  if: can?(:new, Choice.new(tail: @paragraph))
+  if: can?(:new, Choice.new(parent_paragraph: @paragraph))
 
 .list-group
   - @paragraph.children_choices.each do |choice|
     .list-group-item
-      = link_to_unless choice.head.nil?, choice.content, [@game, choice.head]
-      = action_link_to t(".new_head"),
+      = link_to_unless choice.child_paragraph.nil?, choice.content,
+        [@game, choice.child_paragraph]
+      = action_link_to t(".new_child_paragraph"),
         new_game_paragraph_path(params: { choice_id: choice.id }),
-        if: !choice.head.present? && can?(:new, choice.build_head)
+        if: !choice.child_paragraph.present? && can?(:new, choice.build_child_paragraph)
       = action_link_to :edit, [:edit, @game, @paragraph, choice], if: can?(:edit, choice)
       = action_link_to :destroy, [@game, @paragraph, choice], method: :delete,
         data: { confirm: t("questions.confirm") }, if: can?(:destroy, choice)
