--- a/app/views/choices/_form.html.haml
+++ b/app/views/choices/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for [@game, @paragraph, @choice] do |f|
   = f.input :content
-  = f.association :head, label_method: :content, collection: @game.paragraphs
+  = f.association :child_paragraph, label_method: :content,
+    collection: @game.paragraphs
   = f.button :submit
