--- a/app/views/choices/_form.html.haml
+++ b/app/views/choices/_form.html.haml
@@ -2,4 +2,5 @@
   = f.input :content
   = f.association :child_paragraph, label_method: :content,
     collection: @game.paragraphs
-  = f.button :submit
+  
+  = basic_actions f, [@game, @paragraph]
