Owner can publish the game.

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,11 +1,13 @@
 .page-header
   %h1= title @game.name
+  = action_link_to t(".play"), [@game, @game.first_paragraph], if: can?(:play, @game)
+  = action_link_to t(".publish"), [:publish, @game], if: can?(:publish, @game)
   = action_link_to :edit, [:edit, @game], if: can?(:edit, @game)
   = action_link_to :destroy, @game, method: :delete,
     data: { confirm: t("questions.confirm") }, if: can?(:destroy, @game)
-%p= @game.description
-
-= action_link_to t(".play"), [@game, @game.first_paragraph], if: can?(:play, @game)
+  
 = action_link_to t(".new_paragraph"), [:new, @game, :paragraph], if: can?(:edit, @game)
 = action_link_to t(".all_paragraphs"), [@game, :paragraphs], if: can?(:edit, @game)
+
+%p= @game.description
 
