--- a/app/views/paragraphs/show.html.haml
+++ b/app/views/paragraphs/show.html.haml
@@ -1,7 +1,7 @@
 .page-header
   %h1= link_to title(@game.name), @game
 
-- if @paragraph.parent_choices.any?
+- if @paragraph.parent_choices.any? && can?(:edit, @game)
   %h2= t(".parent_actions")
   %table.table.table-hover
     %thead
@@ -18,24 +18,28 @@
               [@game, parent_choice.parent_paragraph]
           %td= parent_choice.content
 
-%p= @paragraph.content
+.panel.panel-default
+  .panel-body
+    %p= @paragraph.content
+    = action_link_to :edit, [:edit, @game, @paragraph], if: can?(:edit, @paragraph)
+    = action_link_to :destroy, [@game, @paragraph], method: :delete,
+      data: { confirm: t("questions.confirm") }, if: can?(:destroy, @paragraph)
+      
+    = action_link_to t(".new_choice"), [:new, @game, @paragraph, :choice],
+      if: can?(:new, Choice.new(parent_paragraph: @paragraph))
 
-= action_link_to :edit, [:edit, @game, @paragraph], if: can?(:edit, @paragraph)
-= action_link_to :destroy, [@game, @paragraph], method: :delete,
-  data: { confirm: t("questions.confirm") }, if: can?(:destroy, @paragraph)
+  .panel-footer
+    .list-group
+      - @paragraph.children_choices.each do |choice|
+        .list-group-item
+          = link_to_unless choice.child_paragraph.nil?, choice.content,
+            [@game, choice.child_paragraph]
+          = action_link_to t(".new_child_paragraph"),
+            new_game_paragraph_path(params: { choice_id: choice.id }),
+            if: !choice.child_paragraph.present? && can?(:new, @game.paragraphs.build)
+          = action_link_to :edit, [:edit, @game, @paragraph, choice], if: can?(:edit, choice)
+          = action_link_to :destroy, [@game, @paragraph, choice], method: :delete,
+            data: { confirm: t("questions.confirm") }, if: can?(:destroy, choice)
   
-= action_link_to t(".new_choice"), [:new, @game, @paragraph, :choice],
-  if: can?(:new, Choice.new(parent_paragraph: @paragraph))
 
-.list-group
-  - @paragraph.children_choices.each do |choice|
-    .list-group-item
-      = link_to_unless choice.child_paragraph.nil?, choice.content,
-        [@game, choice.child_paragraph]
-      = action_link_to t(".new_child_paragraph"),
-        new_game_paragraph_path(params: { choice_id: choice.id }),
-        if: !choice.child_paragraph.present? && can?(:new, @game.paragraphs.build)
-      = action_link_to :edit, [:edit, @game, @paragraph, choice], if: can?(:edit, choice)
-      = action_link_to :destroy, [@game, @paragraph, choice], method: :delete,
-        data: { confirm: t("questions.confirm") }, if: can?(:destroy, choice)
-  
+
