--- a/app/views/paragraphs/index.html.haml
+++ b/app/views/paragraphs/index.html.haml
@@ -4,6 +4,8 @@
     %small= t(".all_paragraphs")
 
 = action_link_to t(".new_paragraph"), [:new, @game, :paragraph], if: can?(:edit, @game)
+- Paragraph::FILTERS.each do |filter|
+  = link_to filter, game_paragraphs_url(@game, filter: filter)
 %table.table.table-hover
   %thead
     %tr
