Show game mark in game#show

--- a/app/views/games/_mark_form.html.haml
+++ b/app/views/games/_mark_form.html.haml
@@ -1,3 +1,4 @@
 = simple_form_for [@game, @mark] do |f|
-  = f.input :value, as: :enumeration, include_blank: false
+  = f.input :value, as: :enumeration, include_blank: false,
+    label: @mark.persisted? ? t(".change_mark") : t(".mark")
   = f.button :submit
