--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -12,7 +12,10 @@
     #main-nav.collapse.navbar-collapse
       %ul.nav.navbar-nav.navbar-right
         - if current_user
-          %li= link_to current_user.email, current_user
+          %li.user-data
+            = link_to current_user do
+              %span= current_user.nickname
+              = image_tag current_user.avatar.thumb.url, class: "img-circle"
           %li= link_to t(".sign_out"), destroy_user_session_path, method: :delete
         - else
           %li= link_to t(".sign_up"), new_user_registration_path
