--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,21 +1,25 @@
-.col-sm-3
-  .panel.panel-default
-    .panel-heading.text-center
-      = image_tag @user.avatar.default.url, class: "img-thumbnail"
-      .stars= stars(@user.average_mark)
-      %h1= title @user.nickname
+.col-md-3.col-sm-12
+  .panel.panel-default.text-center
     .panel-body
-      = action_link_to :edit, edit_user_registration_path, if: can?(:edit, @user)
-      = action_link_to t(".new_game"), new_game_path, if: can?(:create, @user.games.build)
+      .col-sm-6.col-md-12
+        = image_tag @user.avatar.default.url, class: "img-thumbnail"
+        .stars= stars(@user.average_mark)
+        %h1= title @user.nickname
+      .col-sm-6.col-md-12
+        .btn-group-vertical.btn-group-responsive
+          = action_link_to t(".edit_profile"), edit_user_registration_path,
+            if: can?(:edit, @user)
+          = action_link_to t(".new_game"), new_game_path,
+            if: can?(:create, @user.games.build)
       
-.col-sm-9
+.col-md-9.col-sm-12
   .panel.panel-default
     .panel-heading
       %h2= t(".created_games")
     .panel-body
       = render @user_games
       
-.col-sm-9
+.col-md-9.col-sm-12
   .panel.panel-default
     .panel-heading
       %h2= t(".favorite_games")
