Going on with layout.

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -1,11 +1,6 @@
-body
-  > .navbar.navbar-static-top
-    .user-data
-      > a
-        padding: 5px
-        > img
-          height: 40px
-          margin-left: 5px
-        
-  .btn-group-responsive
-    width: 100%
+#main-nav
+  .user.mini-profile
+    margin-top: 5px
+a:hover
+  img
+    opacity: 0.6
