--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,6 +1,9 @@
-%h1= t(".heading")
-= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f|
-  = f.full_error :confirmation_token
-  = f.input :login, :required => true, :autofocus => true
-  = f.button :submit, t(".resend")
-= render "devise/shared/links"
+.panel-heading
+  %h1= t(".heading")
+.panel-body
+  = simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f|
+    = f.full_error :confirmation_token
+    = f.input :login, :required => true, :autofocus => true
+    = f.button :submit, t(".resend")
+.panel-footer
+  = render "devise/shared/links"
