--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,8 +1,11 @@
-%h1= t(".heading")
-= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
-  = f.input :reset_password_token, :as => :hidden
-  = f.full_error :reset_password_token
-  = f.input :password, :label => t(".new_password"), :required => true, :autofocus => true
-  = f.input :password_confirmation, :label => t(".confirm_new_password"), :required => true
-  = f.button :submit, t(".submit")
-= render "devise/shared/links"
+.panel-heading
+  %h1= t(".heading")
+.panel-body
+  = simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
+    = f.input :reset_password_token, :as => :hidden
+    = f.full_error :reset_password_token
+    = f.input :password, :label => t(".new_password"), :required => true, :autofocus => true
+    = f.input :password_confirmation, :label => t(".confirm_new_password"), :required => true
+    = f.button :submit, t(".submit")
+.panel-footer
+  = render "devise/shared/links"
