--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,22 +1,28 @@
-%h1= title t(".heading")
-= simple_form_for resource, as: resource_name,
-  url: registration_path(resource_name), method: :put do |f|
-  = f.input :avatar
-  = f.input :avatar_cache, as: :hidden
-  - if resource.avatar.present?
-    = image_tag resource.avatar.thumb.url, alt: "Avatar"
-  = f.input :username, required: true, autofocus: true
-  = f.input :email, required: true,
-    input_html: { disabled: resource.provider_type.present? }
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    .alert.alert-warning= t(".waiting_for_confirmation", email: resource.unconfirmed_email)
-  - if f.object.provider_type.nil?
-    = f.input :password, autocomplete: "off", hint: t(".leave_blank_or_change"),
-      required: false
-    = f.input :password_confirmation, required: false
-    = f.input :current_password, hint: t(".current_password_required")
-  .form-actions
-    = f.button :submit
-
-= link_to t(".remove_account"), registration_path(resource_name),
-  data: { confirm: t("questions.confirm") }, method: :delete
+.panel-heading
+  %h1= title t(".heading")
+.panel-body
+  = simple_form_for resource, as: resource_name,
+    url: registration_path(resource_name), method: :put do |f|
+    
+    .pull-left
+      = image_tag resource.avatar.thumb.url, alt: "Avatar", class: "img-circle avatar"
+    .pull-left
+      = f.input :avatar
+      = f.input :avatar_cache, as: :hidden
+    .clearfix
+        
+    = f.input :username, required: true, autofocus: true
+    = f.input :email, required: true,
+      input_html: { disabled: resource.provider_type.present? }
+    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+      .alert.alert-warning= t(".waiting_for_confirmation", email: resource.unconfirmed_email)
+    - if f.object.provider_type.nil?
+      = f.input :password, autocomplete: "off", hint: t(".leave_blank_or_change"),
+        required: false
+      = f.input :password_confirmation, required: false
+      = f.input :current_password, hint: t(".current_password_required")
+    .form-actions
+      = f.button :submit
+.panel-footer
+  = link_to t(".remove_account"), registration_path(resource_name),
+    data: { confirm: t("questions.confirm") }, method: :delete
