--- a/app/views/devise/shared/_links.haml
+++ b/app/views/devise/shared/_links.haml
@@ -1,9 +1,19 @@
+- if controller_name == 'registrations'
+  = link_to t(".sign_in"), new_session_path(resource_name)
+  %br
+  
+- if devise_mapping.registerable? && controller_name == 'sessions'
+  = link_to t(".sign_up"), new_registration_path(resource_name)
+  %br
+  
 - if devise_mapping.recoverable? && !controller_name.in?(['passwords', 'confirmations']) && controller_name != 'registrations'
-  %br/
   = link_to t(".forgot_password"), new_password_path(resource_name)
-- if devise_mapping.confirmable? && !controller_name.in?(['confirmations', 'passwords', 'sessions'])
   %br/
+- if devise_mapping.confirmable? && !controller_name.in?(['confirmations', 'passwords', 'sessions'])
   = link_to t(".confirmation_not_received"), new_confirmation_path(resource_name)
+  %br/
 //- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
 //  = link_to t(".unlock_not_received"), new_unlock_path(resource_name)
-//  %br/
+
+
+
