--- a/app/views/layouts/authorization.html.haml
+++ b/app/views/layouts/authorization.html.haml
@@ -1,6 +1,6 @@
 - content_for :main_container do
-  // TODO: wtf? too long
-  .container.col-lg-4.col-lg-offset-4.col-sm-6.col-sm-offset-3.col-xs-10.col-xs-offset-1
-    = yield
+  .container.col-lg-4.col-lg-offset-4.col-sm-6.col-sm-offset-3
+    .panel.panel-default
+      = yield
 
 = render template: "layouts/application"
