User can mark game from game show.

--- a/app/views/games/_aside_panel.html.haml
+++ b/app/views/games/_aside_panel.html.haml
@@ -1,5 +1,4 @@
-- center ||= false
-.col-md-4.col-sm-6{ class: center && "col-md-offset-4 col-sm-offset-3" }
+.col-md-4.col-sm-6
   .panel.panel-default
     .panel-heading
       - if can? :edit, @game
